[tool.poetry]
name = "exp"
version = "0.1.0"
description = ""
authors = ["te nagusami <tenagusami@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docopt = "^0.6.1"
schema = "^0.7.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
